--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
               >
                 <option value="urbex">Urbex (abandoned building)</option>
                 <option value="roofing">Roofing</option>
-                <option value="drain">Drain / Tunnel</option>
-                <option value="mixed">Mixed / Both</option>
-                <option value="other">Other / Not listed</option>
+                <option value="drain">Tunnel</option>
+                <option value="other">Not listed</option>
               </select>
             </div>
 
@@ -139,10 +138,9 @@
                 id="spot-tier"
                 class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-slate-100 focus:border-slate-100"
               >
-                <option value="no_power">No power</option>
                 <option value="graffiti_no_power">Graffiti (no power)</option>
                 <option value="graffiti_power">Graffiti (power)</option>
-                <option value="no_graffiti">No graffiti</option>
+                <option value="no_graffiti">No graffiti (power)☠️ </option>
               </select>
             </div>
 
