--- a/index.html
+++ b/index.html
@@ -60,25 +60,27 @@
     <!-- Mobile toggle button (arrow only) -->
     <button
       id="panel-toggle"
-      class="md:hidden absolute top-24 z-20 w-9 h-9 flex items-center justify-center rounded-full bg-slate-900/90 border border-slate-700 text-slate-100 shadow-lg transition-all duration-300"
+      class="md:hidden absolute top-24 right-4 z-20 w-9 h-9 flex items-center justify-center rounded-full bg-slate-900/90 border border-slate-700 text-slate-100 shadow-lg transition-all duration-300"
       aria-label="Toggle details"
     >
-      ⮜
+      ⮞
     </button>
 
-    <!-- Right-side / centered panel -->
+    <!-- Centered panel -->
     <aside
       id="side-panel"
-      class="absolute top-24 left-0 right-0 mx-auto bottom-4 md:top-20 md:right-4 md:left-auto md:mx-0
+      class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2
              w-[calc(100%-2rem)] max-w-sm z-10
              rounded-2xl
              md:border md:border-slate-700 md:bg-slate-900/90 md:shadow-2xl
              bg-slate-900/95 border border-slate-800
+             max-h-[80vh] overflow-y-auto
              transition-transform duration-300
-             md:translate-x-0 md:opacity-100 md:pointer-events-auto
+             md:opacity-100 md:pointer-events-auto
+             md:translate-x-[-50%]
              translate-x-[140%] opacity-0 pointer-events-none"
     >
-      <div class="h-full flex flex-col overflow-hidden rounded-2xl">
+      <div class="flex flex-col overflow-hidden rounded-2xl">
         <!-- Form -->
         <section class="p-4 border-b border-slate-800">
           <h2 class="text-base md:text-lg font-semibold mb-1">Add a spot</h2>
@@ -224,7 +226,7 @@
               Save spot
             </button>
 
-            <!-- Clear all button (kept small under form) -->
+            <!-- Clear all button (small, under form) -->
             <button
               type="button"
               id="clear-all"
