--- a/index.html
+++ b/index.html
@@ -241,12 +241,14 @@
     </aside>
   </div>
 
-  <!-- Spots browser modal -->
+    <!-- Spots browser modal -->
   <div
     id="spots-modal"
     class="fixed inset-0 z-30 hidden items-center justify-center bg-black/60"
   >
-    <div class="w-full max-w-lg max-h-[80vh] bg-slate-950 border border-slate-700 rounded-2xl flex flex-col overflow-hidden">
+    <div
+      class="w-full max-w-lg max-h-[80vh] bg-slate-950 border border-slate-700 rounded-2xl flex flex-col overflow-hidden min-h-0"
+    >
       <div class="flex items-center justify-between px-4 py-3 border-b border-slate-800">
         <h2 class="text-sm font-semibold">Spots browser</h2>
         <button
@@ -259,7 +261,7 @@
 
       <div class="px-4 pt-3 pb-2 space-y-2 text-[11px]">
         <div class="flex gap-2">
-          <div class="flex-1">
+          <div class="flex-1 min-w-0">
             <p class="mb-1 text-slate-300">Status</p>
             <div class="flex gap-1">
               <button type="button" class="yn-chip status-filter-chip yn-active" data-value="all">
@@ -273,7 +275,8 @@
               </button>
             </div>
           </div>
-          <div class="flex-1">
+
+          <div class="flex-1 min-w-0">
             <p class="mb-1 text-slate-300">Type</p>
             <select
               id="explore-filter"
@@ -301,7 +304,7 @@
 
       <div
         id="spots-modal-list"
-        class="flex-1 px-4 pb-4 space-y-2 overflow-y-auto text-sm"
+        class="flex-1 min-h-0 px-4 pb-4 space-y-2 overflow-y-auto overscroll-contain text-sm"
       ></div>
     </div>
   </div>
