--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
   <!-- Full-screen map -->
   <div class="h-screen w-screen relative overflow-hidden">
     <div class="absolute inset-0">
-      <iframe
-        id="map-frame"
-        src="https://www.google.com/maps?q=Salem%2C%20OR&output=embed"
-        class="urbex-map-iframe"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
-    </div>
+  <iframe
+    id="map-frame"
+    class="urbex-map-iframe"
+    loading="lazy"
+    allowfullscreen
+    referrerpolicy="no-referrer-when-downgrade"
+    src="https://www.google.com/maps/d/u/0/embed?mid=1MOYgFpi4sJJcnl8laOGAkyyL14zJBFA"
+  ></iframe>
+</div>
 
     <!-- Desktop: unchanged look -->
     <header
